app finished, to fix readability of code

--- a/src/components/scoreboard.module.css
+++ b/src/components/scoreboard.module.css
@@ -1,6 +1,6 @@
 .scoreboard {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   text-align: center;
 }
